--- a/client/styles/__input/contact__input.scss
+++ b/client/styles/__input/contact__input.scss
@@ -4,7 +4,7 @@
   vertical-align: top;
   width: 100%;
   height: 32px;
-  padding: 29px 0 0 0;
+  padding: 0;
   outline: none;
   border: 0;
   border-bottom: 1px solid #cccccc;
@@ -15,8 +15,6 @@
   transition: all 0.3s ease;
 
   &:nth-child(1), &:nth-child(2) {
-    padding-top: 29px;
-
     @media screen and (min-width: 768px) {
       padding-top: 0;
     }
@@ -82,5 +80,17 @@
 
   @media screen and (min-width: 768px) {
     width: 46%;
+  }
+
+  &.new_room_form {
+    margin-bottom: 14px;
+
+    &:first-of-type {
+      margin-top: 14px;
+    }
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
   }
 }
