--- a/client/styles/room.scss
+++ b/client/styles/room.scss
@@ -1,8 +1,21 @@
+$text_color: #333333;
+
 body {
   width: 100%;
   min-height: 100%;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
+}
+
+* {
+  outline: none;
+}
+
+.rooms {
+  position: relative;
+  display: block;
+  width: 300px;
+  margin: 14px;
 }
 
 .room {
@@ -35,7 +48,7 @@ body {
 
       &.active {
         background-color: darkorange;
-        box-shadow: 0 0 2px rgba(38, 29, 73, 0.3);
+        box-shadow: 0 0 2px rgba(38, 29, 73, 0.3), 0 0 1px rgba(38, 29, 73, 0.3);
         transition: box-shadow 0.3s ease;
       }
 
@@ -44,6 +57,71 @@ body {
       &.active:hover {
         box-shadow: 0 1px 0 rgb(0, 92, 22);
       }
+    }
+  }
+}
+
+.room_info {
+  position: relative;
+  display: block;
+  width: 100%;
+  margin: 2px;
+  padding: 4px 6px 5px;
+  font-size: 18px;
+  color: $text_color;
+  box-sizing: border-box;
+  cursor: pointer;
+
+  &:nth-last-child(odd) {
+    background-color: rgba(63, 61, 88, 0.10);
+  }
+}
+
+.room_info__remove {
+  position: absolute;
+  top: 0;
+  right: 6px;
+  bottom: 0;
+  width: 10px;
+  height: 10px;
+  margin: auto;
+  cursor: pointer;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 10px;
+    height: 2px;
+    margin: auto;
+    background: #3f3d58;
+    transition: background 0.3s ease;
+    transform: rotate(45deg);
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 10px;
+    height: 2px;
+    margin: auto;
+    background: #3f3d58;
+    transition: background 0.3s ease;
+    transform: rotate(-45deg);
+  }
+
+  &:hover {
+    &::after, &::before {
+      background: #686495;
     }
   }
 }
@@ -155,6 +233,7 @@ form {
     display: block;
     width: 400px;
     height: 50%;
+    min-height: 620px;
     margin: auto;
     padding: 16px;
     border: 1px solid #f9f9f9;
@@ -162,7 +241,215 @@ form {
     background-color: #f5f5f5;
     box-sizing: border-box;
     box-shadow: 0 1px 4px rgba(20, 30, 20, 0.3);
+
+    &.form-message {
+      height: 300px;
+      min-height: initial;
+    }
   }
 }
 
+.form__wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background: rgba(20, 20, 20, 0.8);
+
+  &.hide {
+    display: none;
+  }
+}
+
+.form-message > .form__inner {
+  display: none;
+}
+
 // /form
+
+//form__answer
+.form__answer {
+  position: relative;
+  display: none;
+  width: 100%;
+  height: 100%;
+
+  &.active {
+    display: table;
+  }
+}
+
+.form__answer_p_wrapper {
+  display: table-cell;
+}
+
+.form__answer_p {
+  position: relative;
+  vertical-align: middle;
+  height: 100%;
+  text-align: center;
+}
+
+.form__close {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 30px;
+    height: 2px;
+    margin: auto;
+    background: #3f3d58;
+    transition: background 0.3s ease;
+    transform: rotate(45deg);
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 30px;
+    height: 2px;
+    margin: auto;
+    background: #3f3d58;
+    transition: background 0.3s ease;
+    transform: rotate(-45deg);
+  }
+
+  &:hover {
+    &::after, &::before {
+      background: #686495;
+    }
+  }
+}
+
+// /form__answer
+
+//titles
+.title_1 {
+  font-size: 24px;
+  font-weight: 700;
+  color: $text_color;
+
+  &.title_1-answer {
+    position: relative;
+    display: table-row;
+  }
+}
+
+.title_2 {
+  font-size: 20px;
+  font-weight: 700;
+  color: $text_color;
+}
+
+// /titles
+
+//room_remove
+.room_remove {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: table;
+  width: 300px;
+  height: 130px;
+  margin: auto;
+  padding: 16px;
+  border: 1px solid #f9f9f9;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  box-sizing: border-box;
+  box-shadow: 0 1px 4px rgba(20, 30, 20, 0.3);
+}
+
+.room_remove__wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(20, 20, 20, 0.8);
+
+  &.active {
+    display: table;
+  }
+}
+
+.room_remove_row {
+  position: relative;
+  display: table-row;
+  vertical-align: middle;
+
+  &.room_remove_row-buttons {
+    height: 32px;
+
+    & > button {
+      appearance: none;
+      position: relative;
+      width: 40%;
+      height: 32px;
+      margin: 0 5%;
+      border: 0;
+      background-color: #00aeec;
+      font-size: 16px;
+      font-weight: 400;
+      text-transform: uppercase;
+      color: white;
+      cursor: pointer;
+      transition: color 0.3s ease;
+
+      & span {
+        position: relative;
+        z-index: 10;
+      }
+
+      &::before {
+        content: '';
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 0;
+        height: 100%;
+        border: 1px solid #00aeec;
+        background: white;
+        box-sizing: border-box;
+        transition: width 0.3s ease;
+      }
+      
+      &:hover {
+        color: #00aeec;
+
+        &::before {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+.room_remove__message{
+  line-height: 22px;
+}
+// /room_remove
