--- a/client/styles/table.scss
+++ b/client/styles/table.scss
@@ -1,17 +1,19 @@
 .table {
   &.table-button {
-    -webkit-appearance: none;
     appearance: none;
     position: relative;
     display: block;
     width: 34px;
     height: 34px;
+    margin: 4px auto;
     border-radius: 2px;
     outline: none;
-    background-color: limegreen;
+    background-color: #74cd7b;
+    box-shadow: inset 0 0 1px rgba(20, 20, 20, 0.4), 0 0 2px rgba(255, 255, 2552, 0.7);
+    cursor: pointer;
 
     &.free {
-      background-color: limegreen;
+      background-color: #9ccd9f;
     }
 
     &.used {
@@ -19,9 +21,21 @@
     }
 
     &.active, &:checked {
-      background-color: darkorange;
-      box-shadow: 0 0 2px rgba(38, 29, 73, 0.3);
+      background-color: #ff9c57;
+      box-shadow: 1px 1px 2px rgba(28, 21, 55, 0.5);
       transition: box-shadow 0.3s ease;
     }
   }
 }
+
+.table__inner {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.table__wrapper {
+  position: relative;
+  margin: 14px auto;
+}
+
