--- a/client/styles/room.scss
+++ b/client/styles/room.scss
@@ -370,7 +370,7 @@ form {
   left: 0;
   display: table;
   width: 300px;
-  height: 130px;
+  height: 120px;
   margin: auto;
   padding: 16px;
   border: 1px solid #f9f9f9;
@@ -421,6 +421,8 @@ form {
       & span {
         position: relative;
         z-index: 10;
+        width: 100%;
+        height: 100%;
       }
 
       &::before {
@@ -437,7 +439,7 @@ form {
         box-sizing: border-box;
         transition: width 0.3s ease;
       }
-      
+
       &:hover {
         color: #00aeec;
 
