--- a/client/styles/room.scss
+++ b/client/styles/room.scss
@@ -35,8 +35,28 @@ body {
       line-height: 40px;
       text-align: center;
       color: white;
-      cursor: pointer;
       box-shadow: 0 0 0 rgba(38, 29, 73, 0);
+      transition: outline 0.3s ease;
+
+      & .table__btn {
+        @extend .room_remove_row.room_remove_row-buttons.button;
+
+        width: auto !important;
+        margin: 0 !important;
+        padding: 0 14px !important;
+
+        &.table__btn_cancel {
+          display: none;
+
+          &.active {
+            display: inline-block;
+          }
+        }
+
+        & > span {
+          font-size: 14px;
+        }
+      }
 
       &.free {
         background-color: limegreen;
@@ -49,13 +69,18 @@ body {
       &.active {
         background-color: darkorange;
         box-shadow: 0 0 2px rgba(38, 29, 73, 0.3), 0 0 1px rgba(38, 29, 73, 0.3);
-        transition: box-shadow 0.3s ease;
+      }
+
+      &.none {
+        background-color: #f8f8f8;
       }
 
       &.free:hover,
       &.used:hover,
       &.active:hover {
-        box-shadow: 0 1px 0 rgb(0, 92, 22);
+        cursor: pointer;
+        outline: 1px solid rgba(255, 255, 255, 0.31);
+        outline-offset: -3px;
       }
     }
   }
@@ -128,16 +153,47 @@ body {
 
 .table__popup {
   position: absolute;
-  top: 40px;
+  top: 35px;
   left: 0;
+  z-index: 20;
   display: none;
   width: 180px;
-  height: 180px;
   padding: 12px 16px;
   border-radius: 4px;
   background: #f5f5f5;
   box-shadow: 0 2px 3px rgba(20, 20, 20, 0.4);
   box-sizing: border-box;
+  text-align: left;
+
+  & .table__popup_form {
+    display: none;
+
+    &.active {
+      display: block;
+    }
+  }
+
+  & .table__popup_info {
+    display: block;
+
+    &.hide {
+      display: none;
+    }
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 15px;
+    z-index: 19;
+    display: block;
+    width: 10px;
+    height: 10px;
+    border: 5px solid transparent;
+    border-bottom: 5px solid #f5f5f5;
+    box-sizing: border-box;
+  }
 
   & p {
     margin: 0;
@@ -403,7 +459,7 @@ form {
   &.room_remove_row-buttons {
     height: 32px;
 
-    & > button {
+    & > button, &.button {
       appearance: none;
       position: relative;
       width: 40%;
@@ -451,7 +507,8 @@ form {
   }
 }
 
-.room_remove__message{
+.room_remove__message {
   line-height: 22px;
 }
+
 // /room_remove
