employers search, viewport, styles

--- a/client/templates/employers.html
+++ b/client/templates/employers.html
@@ -1,5 +1,5 @@
 <template name="employers">
-    <aside class="emp__aside">
+    <div class="emp__search_wrapper">
         <input class="emp__search" type="text" id="emp_serach" placeholder="Search">
 
         <ul class="emp__list">
@@ -7,7 +7,7 @@
                 {{> employe}}
             {{/each}}
         </ul>
-    </aside>
+    </div>
 </template>
 
 <template name="employe">
