--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -1,4 +1,11 @@
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
 <template name="index">
+    <head>
+        <meta>
+    </head>
     <header class="header">
         <nav class="nav nav-header">
                 <a class="nav__itm" href="/rooms">Rooms</a>
