--- a/client/styles/emp.scss
+++ b/client/styles/emp.scss
@@ -40,6 +40,12 @@ $theme_blue: #00aeec;
       background: transparent;
       transition: color 0.3s ease;
 
+      & .emp__info {
+        display: none;
+        font-size: 13px;
+        color: rgba(21, 27, 73, 0.5);
+      }
+
       &:hover {
         color: rgba(21, 27, 73, 0.8);
       }
