--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -9,7 +9,7 @@
     <header class="header">
         <nav class="nav nav-header">
                 <a class="nav__itm" href="/rooms">Rooms</a>
-            <a class="nav__itm" href="/emplist">Employers</a>
+            <a class="nav__itm" href="/emplist">employes</a>
         </nav>
     </header>
 
