--- a/client/styles/__input/contact__input.scss
+++ b/client/styles/__input/contact__input.scss
@@ -1,4 +1,5 @@
 .contact__input {
+  appearance: none;
   position: relative;
   display: inline-block;
   vertical-align: top;
@@ -8,6 +9,7 @@
   outline: none;
   border: 0;
   border-bottom: 1px solid #cccccc;
+  border-radius: 0;
   background: transparent;
   font: 300 16px "Lato", sans-serif;
   color: #999999;
